Theme CSS + JS Built modularly

--- a/system/themes/gsma/index.html
+++ b/system/themes/gsma/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>StoryBox | Default Theme Preview</title>
+	<title>StoryBox | GSMA Theme Preview</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- THEMECSS -->
+	<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 
 </head>
 <body>
