--- a/application/src/index.html
+++ b/application/src/index.html
@@ -3,7 +3,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/easing/EasePack.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/plugins/ScrollToPlugin.min.js"></script>
-<link href="style.min.css" rel="stylesheet" />
+<link href="<!--##BASEURL##-->style.min.css" rel="stylesheet" />
 
 <!-- StoryBox Core -->
 <script src="https://res.cloudinary.com/rgdigital/raw/upload/v1549037754/StoryBox/core/storybox.min.js"></script>
@@ -12,8 +12,12 @@
 <p>Lorem ipsum dolor sit amet</p>
 
 <!-- Scripts -->
-<script type="text/javascript" src="app.min.js"></script>
+<script type="text/javascript" src="<!--##BASEURL##-->app.min.js"></script>
 
 <script type="text/javascript">
-	var StoryBox = new StoryBox();
+	var StoryBox = new StoryBox({
+		url : {
+			base : '<!--##BASEURL##-->'
+		}
+	});
 </script>
